# airflow-sftp

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Docker/airflow-celery-image/: Dockerfile
Docker/celery-taskqueue-image/: Dockerfile
celery-server/: celeryconfig.py  requirements.txt  tasks.py
celery-server/filesystem/: __init__.py
dags/: file_transfer_dag.py  file_transfer_dag_ver1.py  file_transfer_dag_ver2.py  hello_world_dag.py
plugins/file_transfer_plugin/: __init__.py
plugins/file_transfer_plugin/hooks/: __init__.py  factory.py  sftp_hook.py
plugins/file_transfer_plugin/operators/: celery_file_transfer_operator.py  file_transfer_operator.py
plugins/file_transfer_plugin/taskqueue/: celeryconfig.py  tasks.py
scripts/: start-docker.sh
